WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268886
[Unified Text Replacement] Text replacements do not have their associated document markers properly updated
https://bugs.webkit.org/show_bug.cgi?id=268886
Summary
[Unified Text Replacement] Text replacements do not have their associated doc...
Richard Robinson
Reported
2024-02-06 19:58:17 PST
rdar://120563596
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2024-02-06 20:18:47 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23977
EWS
Comment 2
2024-02-08 09:59:09 PST
Committed
274292@main
(3a919dcf0573): <
https://commits.webkit.org/274292@main
> Reviewed commits have been landed. Closing PR #23977 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug