Source/WebKit/WebProcess/WebPage/UnifiedTextReplacementController.cpp
@@ -34,6 +34,7 @@
 #include <WebCore/DocumentMarkerController.h>
 #include <WebCore/Editor.h>
 #include <WebCore/HTMLConverter.h>
+#include <WebCore/RenderedDocumentMarker.h>
 #include <WebCore/TextIterator.h>
 
 namespace WebKit {
@@ -53,6 +54,28 @@ static void replaceTextInRange(WebCore::LocalFrame& frame, const SimpleRange& ra
     frame.editor().replaceSelectionWithText(replacementText, WebCore::Editor::SelectReplacement::Yes, WebCore::Editor::SmartReplace::No, WebCore::EditAction::InsertReplacement);
 }
 
+static std::optional<std::tuple<Node&, DocumentMarker&>> findReplacementMarkerByUUID(WebCore::Document& document, const WTF::UUID& replacementUUID)
+{
+    RefPtr<Node> targetNode;
+    WeakPtr<DocumentMarker> targetMarker;
+
+    document.markers().forEachOfTypes({ DocumentMarker::Type::UnifiedTextReplacement }, [&replacementUUID, &targetNode, &targetMarker] (auto& node, auto& marker) mutable {
+        auto data = std::get<DocumentMarker::UnifiedTextReplacementData>(marker.data());
+        if (data.uuid != replacementUUID)
+            return false;
+
+        targetNode = &node;
+        targetMarker = &marker;
+
+        return true;
+    });
+
+    if (targetNode && targetMarker)
+        return { { *targetNode, *targetMarker } };
+
+    return std::nullopt;
+}
+
 UnifiedTextReplacementController::UnifiedTextReplacementController(WebPage& webPage)
     : m_webPage(webPage)
 {
@@ -68,7 +91,7 @@ void UnifiedTextReplacementController::willBeginTextReplacementSession(const WTF
         return;
     }
 
-    auto* corePage = m_webPage->corePage();
+    RefPtr corePage = m_webPage->corePage();
     if (!corePage) {
         ASSERT_NOT_REACHED();
         completionHandler({ });
@@ -105,10 +128,12 @@ void UnifiedTextReplacementController::textReplacementSessionDidReceiveReplaceme
 {
     RELEASE_LOG(UnifiedTextReplacement, "UnifiedTextReplacementController::textReplacementSessionDidReceiveReplacements (%s) [received replacements: %zu, finished: %d]", uuid.toString().utf8().data(), replacements.size(), finished);
 
-    if (!m_webPage)
+    if (!m_webPage) {
+        ASSERT_NOT_REACHED();
         return;
+    }
 
-    auto* corePage = m_webPage->corePage();
+    RefPtr corePage = m_webPage->corePage();
     if (!corePage) {
         ASSERT_NOT_REACHED();
         return;
@@ -140,11 +165,111 @@ void UnifiedTextReplacementController::textReplacementSessionDidReceiveReplaceme
         auto newRangeWithOffset = CharacterRange { locationWithOffset, replacementData.replacement.length() };
         auto newResolvedRange = resolveCharacterRange(*sessionRange, newRangeWithOffset);
 
-        auto markerData = DocumentMarker::UnifiedTextReplacementData { replacementData.originalString.string, replacementData.uuid, DocumentMarker::UnifiedTextReplacementData::ApplyIndicator::Yes };
+        auto markerData = DocumentMarker::UnifiedTextReplacementData { replacementData.originalString.string, replacementData.uuid, DocumentMarker::UnifiedTextReplacementData::State::Pending };
         addMarker(resolvedRange, DocumentMarker::Type::UnifiedTextReplacement, markerData);
 
         additionalOffset += replacementData.replacement.length() - replacementData.originalRange.length;
     }
+}
+
+void UnifiedTextReplacementController::textReplacementSessionDidUpdateStateForReplacement(const WTF::UUID& uuid, WebTextReplacementData::State state, const WebTextReplacementData& replacement, const WebUnifiedTextReplacementContextData& context)
+{
+    RELEASE_LOG(UnifiedTextReplacement, "UnifiedTextReplacementController::textReplacementSessionDidUpdateStateForReplacement (%s) [new state: %hhu, replacement: %s]", uuid.toString().utf8().data(), enumToUnderlyingType(state), replacement.uuid.toString().utf8().data());
+
+    if (!m_webPage) {
+        ASSERT_NOT_REACHED();
+        return;
+    }
+
+    RefPtr corePage = m_webPage->corePage();
+    if (!corePage) {
+        ASSERT_NOT_REACHED();
+        return;
+    }
+
+    Ref frame = CheckedRef(corePage->focusController())->focusedOrMainFrame();
+    RefPtr document = frame->document();
+    if (!document) {
+        ASSERT_NOT_REACHED();
+        return;
+    }
+
+    if (state != WebTextReplacementData::State::Committed && state != WebTextReplacementData::State::Reverted)
+        return;
+
+    auto nodeAndMarker = findReplacementMarkerByUUID(*document, replacement.uuid);
+    if (!nodeAndMarker) {
+        ASSERT_NOT_REACHED();
+        return;
+    }
+
+    auto& [node, marker] = *nodeAndMarker;
+
+    auto rangeToReplace = makeSimpleRange(node, marker);
+
+    auto oldData = std::get<DocumentMarker::UnifiedTextReplacementData>(marker.data());
+
+    auto offsetRange = OffsetRange { marker.startOffset(), marker.endOffset() };
+    document->markers().removeMarkers(node, offsetRange, { DocumentMarker::Type::UnifiedTextReplacement });
+
+    auto [newText, newState] = [&]() -> std::tuple<String, DocumentMarker::UnifiedTextReplacementData::State> {
+        switch (state) {
+        case WebTextReplacementData::State::Committed:
+            return std::make_tuple(replacement.replacement, DocumentMarker::UnifiedTextReplacementData::State::Committed);
+
+        case WebTextReplacementData::State::Reverted:
+            return std::make_tuple(oldData.originalText, DocumentMarker::UnifiedTextReplacementData::State::Reverted);
+
+        default:
+            RELEASE_ASSERT_NOT_REACHED();
+        }
+    }();
+
+    replaceTextInRange(frame.get(), rangeToReplace, newText);
+
+    auto newData = DocumentMarker::UnifiedTextReplacementData { oldData.originalText, oldData.uuid, newState };
+    document->markers().addMarker(node, DocumentMarker { DocumentMarker::Type::UnifiedTextReplacement, offsetRange, WTFMove(newData) });
+}
+
+void UnifiedTextReplacementController::didEndTextReplacementSession(const WTF::UUID& uuid, bool accepted)
+{
+    RELEASE_LOG(UnifiedTextReplacement, "UnifiedTextReplacementController::didEndTextReplacementSession (%s) [accepted: %d]", uuid.toString().utf8().data(), accepted);
+
+    if (!m_webPage) {
+        ASSERT_NOT_REACHED();
+        return;
+    }
+
+    RefPtr corePage = m_webPage->corePage();
+    if (!corePage) {
+        ASSERT_NOT_REACHED();
+        return;
+    }
+
+    Ref frame = CheckedRef(corePage->focusController())->focusedOrMainFrame();
+    RefPtr document = frame->document();
+    if (!document) {
+        ASSERT_NOT_REACHED();
+        return;
+    }
+
+    // FIXME: Associate the markers with a specific session, and only modify the markers which belong
+    // to this session.
+
+    if (!accepted) {
+        document->markers().forEachOfTypes({ DocumentMarker::Type::UnifiedTextReplacement }, [&frame] (auto& node, auto& marker) mutable {
+            auto data = std::get<DocumentMarker::UnifiedTextReplacementData>(marker.data());
+            if (data.state == DocumentMarker::UnifiedTextReplacementData::State::Reverted)
+                return false;
+
+            auto rangeToReplace = makeSimpleRange(node, marker);
+            replaceTextInRange(frame.get(), rangeToReplace, data.originalText);
+
+            return false;
+        });
+    }
+
+    document->markers().removeMarkers({ DocumentMarker::Type::UnifiedTextReplacement });
 }
 
 } // namespace WebKit
